# RC2026_RoboticArm2

./: .gitignore  AGENTS.md  MUJOCO_LOG.TXT  README.md  log.txt  plan.md
src/arm/: CMakeLists.txt  package.xml
src/arm/config/: joint_names_robotic_arm.yaml
src/arm/model/: Link2.STL  Link3.STL  Link4.STL  Link5.STL  Link6.STL  arm3.csv  arm3.urdf  arm4.csv  arm4.urdf  base_link.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  robotic_arm.csv  robotic_arm.urdf  robotic_arm.xml  robotic_arm.xml.bak  scene.xml
src/arm_calc/: CMakeLists.txt  package.xml
src/arm_calc/include/arm_action/: basic_moves.hpp
src/arm_calc/include/arm_calc/: arm_calc.hpp  arm_ctrl.hpp  common_types.hpp  trajectory_calc.hpp
src/arm_calc/src/: arm_ctrl.cpp  arm_test_node.cpp  main.cpp
src/arm_calc/src/arm_action/: basic_moves.cpp
src/arm_calc/src/arm_calc/: arm_calc.cpp  trajectory_calc.cpp
src/arm_task/: CMakeLists.txt  package.xml
src/arm_task/config/: arm_position.yaml
src/arm_task/include/: robot.hpp  task.hpp
src/arm_task/include/arm_task/: task.hpp
src/arm_task/include/task/: base_task.hpp  catch_kfs.hpp  idel.hpp  move_kfs.hpp  place_kfs.hpp
src/arm_task/src/: catch_kfs_test.cpp  main.cpp  place_kfs_test.cpp  robot.cpp  task.cpp
src/arm_task/src/task/: catch_kfs.cpp  idel.cpp  move_kfs.cpp  place_kfs.cpp
src/dog_controller/: CMakeLists.txt  package.xml  plugin.xml
src/dog_controller/include/dog_controller/: dog_controller.hpp
src/dog_controller/src/: dog_controller.cpp
src/launch_pack/: CMakeLists.txt  package.xml
src/launch_pack/config/: ros2_controller.yaml
src/launch_pack/launch/: arm_mujoco_sim.launch.py  arm_real.launch.py  arm_real_target_test.launch.py  arm_static_display.launch.py  arm_task_place_test.launch.py  arm_task_rviz2.launch.py  arm_task_sim.launch.py  arm_task_target_test.launch.py  arm_vision_task.launch.py  vision_tf_test.launch.py
src/launch_pack/rviz/: arm_display_config.rviz  display_config.rviz
src/mujoco_ros2_control/: CMakeLists.txt
src/mujoco_ros2_control/include/mujoco_visualization/: mujoco_visualization.hpp
src/mujoco_ros2_control/src/: mujoco_visualization.cpp
src/robot_driver/include/robot_driver/: cdc_trans.hpp  data_pack.h  serialnode.hpp
src/robot_driver/src/: cdc_trans.cpp  main.cpp  serialnode.cpp
src/robot_interfaces/: CMakeLists.txt
src/robot_interfaces/action/: ArmTask.action
src/robot_interfaces/msg/: Arm.msg  Arm4.msg  Armmode.msg  Servo.msg
src/vision/: CMakeLists.txt  package.xml  vision.cpp
