<?xml version="1.0"?>
<package format="3">
  <name>arm</name>
  <version>1.0.0</version>
  <description>URDF Description package for arm robot</description>

  <maintainer email="xin@example.com">xin</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS2 runtime dependencies -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>
